# libpoporon

./: .clang-format  .devcontainer.json  CMakeLists.txt  Dockerfile  README.md  README_ja.md  ci.sh  container_ci.sh  format.py
.github/workflows/: ci.yaml  coverage.yaml
cmake/: buildtime.cmake  emscripten.cmake  test.cmake  valgrind.cmake
include/: poporon.h
include/poporon/: bch.h  erasure.h  gf.h  ldpc.h  rng.h  rs.h
src/: bch.c  common.h  decode.c  encode.c  erasure.c  gf.c  ldpc.c  poporon.c  poporon_internal.h  rng.c  rs.c
src/internal/: common.h  config.h  ldpc.h  simd.h
tests/: fec_compat.c  test_basic.c  test_bch.c  test_codec.c  test_erasure.c  test_gf.c  test_invalid.c  test_ldpc.c  test_rng.c  test_rs.c  test_u8.c  test_unified.c  test_util.h  testfec_u8.c  util.h
